ci: switch git:// URI to https://
```
fatal: remote error:
  The unauthenticated git protocol on port 9418 is no longer supported.
Please see https://github.blog/2021-09-01-improving-git-protocol-security-github/ for more information.

```

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -23,13 +23,13 @@ resources:
 - name: kubernetes-resource
   type: git
   source:
-    uri: git://github.com/cycloidio/kubernetes-resource.git
+    uri: https://github.com/cycloidio/kubernetes-resource.git
     branch: master
 
 - name: kubernetes-resource-release
   type: git
   source:
-    uri: git://github.com/cycloidio/kubernetes-resource.git
+    uri: https://github.com/cycloidio/kubernetes-resource.git
     branch: master
     tag_filter: v*
 
